Finalizacion de la parte Ventas con todos sus componentes necesarios

--- a/group/group.html
+++ b/group/group.html
@@ -15,5 +15,11 @@
             <label for="pasaporte"><input type="radio" name="documento" id="pasaporte" value="Pasaporte"><span>Pasaporte</span></label>
         </div>
     </div>
+    <div class="grupo-boton">
+        <div class="grupo-boton">
+            <label for="factura"><input type="radio" name="pago" id="factura" value="factura"><span>Factura</span></label>
+            <label for="boleta"><input type="radio" name="pago" id="boleta" value="Boleta"><span>Boleta</span></label>
+        </div>
+    </div>
 </body>
 </html>
