Ventana Categorias terminado con modificacion de heigh en usuarioComponent

--- a/usuarioComponent/usuarios.html
+++ b/usuarioComponent/usuarios.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="info">
                         <div class="name">
-                            <h1>Laurel Boyd</h1>
+                            <h1>Laurel Boy</h1>
                             <h2>Laurel.Boyd@mail.com</h2>
                         </div>
                         <div class="box">
